--- a/main.css
+++ b/main.css
@@ -168,6 +168,16 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+
+/* footer */
+.pds-footer {
+    margin-top: 20px;
+    width: 100%;
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 10%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+    position: relative;
+    overflow-x: hidden;
+}
 @media only screen and (max-width: 1199px){
     .pds-container {
         width: 100%!important;
