--- a/main.css
+++ b/main.css
@@ -4,6 +4,11 @@
 article, aside, figure, footer, header, hgroup, section, div{
     display: block;
 }
+a {
+    /* color: #485fc7; */
+    cursor: pointer;
+    text-decoration: none;
+}
 @font-face{
     font-family:"utm-eremitage";
     src:url("assets/logo/UTM Eremitage.ttf") format("woff"),
@@ -124,8 +129,9 @@ body {
 }
 .pds-homepage{
     background-color: aqua;
-    height: 1500px;
 }
+
+/* slideshow */
 .mySlides {
     display: none
 }
@@ -135,41 +141,158 @@ body {
 .w3-badge {
     cursor: pointer
 }
-.w3-badge,.w3-tag{background-color:#000;color:#fff;display:inline-block;padding-left:8px;padding-right:8px;text-align:center}
-.w3-white,.w3-hover-white:hover{color:#000!important;background-color:#fff!important}
+
+.w3-badge,
+.w3-tag {
+    background-color: #000;
+    color: #fff;
+    display: inline-block;
+    padding-left: 8px;
+    padding-right: 8px;
+    text-align: center
+}
+
+.w3-white,
+.w3-hover-white:hover {
+    color: #000 !important;
+    background-color: #fff !important
+}
+
 .w3-badge {
     height: 13px;
     width: 13px;
     padding: 0
-}.w3-badge{border-radius:50%}
-.w3-tooltip, .w3-display-container {
+}
+
+.w3-badge {
+    border-radius: 50%
+}
+
+.w3-tooltip,
+.w3-display-container {
     position: relative;
 }
-.w3-left{float:left!important}.w3-right{float:right!important}
-.w3-right{float:right!important}
-.w3-text-white,.w3-hover-text-white:hover{color:#fff!important}
-.w3-text-black,.w3-hover-text-black:hover{color:#000!important}
-.w3-section,.w3-code{margin-top:16px!important;margin-bottom:16px!important}
-.w3-center {
-    text-align: center!important;
+
+.w3-left {
+    float: left !important
 }
+
+.w3-right {
+    float: right !important
+}
+
+.w3-text-white,
+.w3-hover-text-white:hover {
+    color: #fff !important
+}
+
+.w3-text-black,
+.w3-hover-text-black:hover {
+    color: #000 !important
+}
+
+.w3-section,
+.w3-code {
+    margin-top: 16px !important;
+    margin-bottom: 16px !important
+}
+
+.w3-center {
+    text-align: center !important;
+}
+
 .w3-large {
-    font-size: 18px!important;
-}.w3-container, .w3-panel {
+    font-size: 18px !important;
+}
+
+.w3-container,
+.w3-panel {
     padding: 0.01em 16px;
-}.w3-display-bottommiddle {
+}
+.w3-display-bottommiddle {
+    width: 100%;
     position: absolute;
     left: 50%;
     bottom: 0;
-    transform: translate(-50%,0%);
-    -ms-transform: translate(-50%,0%);
+    transform: translate(-50%, 0%);
 }
-.w3-content, .w3-auto {
-    margin-left: auto;
+
+
+.w3-content,
+.w3-auto {
+    margin-left: 10px;
     margin-right: auto;
 }
-
-
+.block-top-left{
+    max-width: 877px;
+}
+.mySlides{
+    width: 100%;
+}
+.block-top-right{
+    width: 283px;
+    margin-left: 15px;
+}
+.right-banner {
+    width: 100%;
+    max-width: 283px;
+    height: 376px;
+}
+.right-banner-item{
+    min-height: calc(33.33333% - 10px);
+    overflow: hidden;
+    width: 100%;
+    display: block;
+    /* border-radius: 10px; */
+}
+.right-banner .right-banner__item .right-banner__img {
+    float: left;
+}
+img {
+    height: auto;
+    max-width: 100%;
+}
+.horizontal-banner {
+    margin-bottom: 15px;
+}
+.block-product{
+    margin-bottom: 10px;
+    min-height: 250px;
+}
+.product-list-title {
+    margin-bottom: 2px;
+}
+.title {
+    display: block;
+    font-size: 12px;
+    line-height: 40px;
+    white-space: nowrap;
+    margin-right: 20px;
+    margin-bottom: unset;
+}
+.title h2 {
+    font-weight: 600;
+    color: #444;
+}
+.related-tag {
+    float: right;
+    border-radius: 10px;
+    background-color: #f3f4f6;
+    border: 1px solid #e5e7eb;
+    color: #444;
+    padding: 5px 10px;
+    font-size: 13px;
+    white-space: nowrap;
+    height: 34px;
+}
+.list-related-tag {
+    align-items: center;
+    display: flex;
+    margin-left: auto;
+}
+.related-tag:not(:last-child) {
+    margin-right: 10px;
+}
 /* footer */
 .pds-footer {
     margin-top: 20px;
