--- a/main.css
+++ b/main.css
@@ -1,42 +1,56 @@
-*, :after, :before {
+*,
+:after,
+:before {
     box-sizing: inherit;
 }
-article, aside, figure, footer, header, hgroup, section, div{
+
+article,
+aside,
+figure,
+footer,
+header,
+hgroup,
+section,
+div {
     display: block;
 }
+
 a {
     /* color: #485fc7; */
     cursor: pointer;
     text-decoration: none;
 }
-@font-face{
-    font-family:"utm-eremitage";
-    src:url("assets/logo/UTM Eremitage.ttf") format("woff"),
-    url("assets/logo/UTM Eremitage.ttf") format("opentype"),
-    url("assets/logo/UTM Eremitage.ttf") format("truetype");
+
+@font-face {
+    font-family: "utm-eremitage";
+    src: url("assets/logo/UTM Eremitage.ttf") format("woff"),
+        url("assets/logo/UTM Eremitage.ttf") format("opentype"),
+        url("assets/logo/UTM Eremitage.ttf") format("truetype");
 }
+
 body {
     color: #4a4a4a;
     font-size: 1em;
     font-weight: 400;
     line-height: 1.5;
-    margin:0;
+    margin: 0;
     padding: 0;
-    font-family:-apple-system,BlinkMacSystemFont,helvetica neue,segoe ui,helvetica,roboto,noto,arial,sans-serif!important;
-    -webkit-font-smoothing:antialiased
+    font-family: -apple-system, BlinkMacSystemFont, helvetica neue, segoe ui, helvetica, roboto, noto, arial, sans-serif !important;
+    -webkit-font-smoothing: antialiased
 }
+
 #pdsHeader {
     width: 100%;
     background: #43C0B8;
     z-index: 1000;
 }
 
-.box-logo{
+.box-logo {
     width: 201px;
     height: 35px;
 }
 
-.pds-container{
+.pds-container {
     max-width: 1200px;
     margin: 0 auto;
     display: block;
@@ -44,7 +58,8 @@ body {
     position: relative;
     box-sizing: border-box;
 }
-.pds-navbar{
+
+.pds-navbar {
     height: 64px;
     padding: 0;
     display: flex;
@@ -53,57 +68,66 @@ body {
     width: 100%;
     margin: 0 auto;
 }
-.icon-logo{
+
+.icon-logo {
     background-image: url(assets/logo/logo1.png);
     background-position: 0 0;
-    background-repeat:no-repeat;
-	display:inline-block;
-    background-size:201px 35px;
-	line-height:30px;
-	vertical-align:middle;
+    background-repeat: no-repeat;
+    display: inline-block;
+    background-size: 201px 35px;
+    line-height: 30px;
+    vertical-align: middle;
 }
-.navbar-brand{
+
+.navbar-brand {
     align-items: stretch;
     display: flex;
     flex-shrink: 0;
 }
-.header-item{
+
+.header-item {
     display: flex;
     align-items: center;
     height: 42px;
     padding: 6px 10px;
     border-radius: 10px;
-    text-decoration: none!important;
+    text-decoration: none !important;
     position: relative;
 }
-.header-item{
-    background: hsla(0,0%,100%,.2);
+
+.header-item {
+    background: hsla(0, 0%, 100%, .2);
 }
 
-.about-icon{
+.about-icon {
     display: flex;
     align-items: center;
     margin-right: 5px;
     color: #FFF;
 }
-.about-content{
+
+.about-content {
     font-size: 12px;
     line-height: 1.5;
     color: #fff;
 }
-.box-search{
+
+.box-search {
     width: 300px;
     float: left;
     margin: 0 10px 0 0;
 }
-.box-search form{
+
+.box-search form {
     box-sizing: border-box;
     position: relative;
 }
-.is-flex{
-    display: flex!important;
+
+.is-flex {
+    display: flex !important;
 }
-.input-group-btn button{
+
+.input-group-btn button {
     background-color: #fff;
     box-sizing: border-box;
     height: 34px;
@@ -111,7 +135,8 @@ body {
     border-radius: 10px 0 0 10px;
     color: #707070;
 }
-.pds-input{
+
+.pds-input {
     width: 100%;
     height: 34px;
     font-size: 16px;
@@ -120,151 +145,104 @@ body {
     border: 0;
     padding: 0.5rem 1rem 0.5rem 0.6rem;
 }
-.btn-contact{
+
+.btn-contact {
     background: none;
 }
-.btn-contact:hover{
-    background: hsla(0,0%,100%,.2);
+
+.btn-contact:hover {
+    background: hsla(0, 0%, 100%, .2);
     padding: 10px;
 }
-.pds-homepage{
+
+.pds-homepage {
     background-color: rgba(251, 251, 251, 0.848);
     border-radius: 10px;
-    padding: 10px 0 10px 0;
+    padding: 10px;
     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 10%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
 
 /* slideshow */
-.mySlides {
-    display: none
-}
 
-.w3-left,
-.w3-right,
-.w3-badge {
-    cursor: pointer
-}
-
-.w3-badge,
-.w3-tag {
-    background-color: #000;
-    color: #fff;
-    display: inline-block;
-    padding-left: 8px;
-    padding-right: 8px;
-    text-align: center
-}
-
-.w3-white,
-.w3-hover-white:hover {
-    color: #000 !important;
-    background-color: #fff !important
-}
-
-.w3-badge {
-    height: 13px;
-    width: 13px;
-    padding: 0
-}
-
-.w3-badge {
-    border-radius: 50%
-}
-
-.w3-tooltip,
-.w3-display-container {
-    position: relative;
-}
-
-.w3-left {
-    float: left !important
-}
-
-.w3-right {
-    float: right !important
-}
-
-.w3-text-white,
-.w3-hover-text-white:hover {
-    color: #fff !important
-}
-
-.w3-text-black,
-.w3-hover-text-black:hover {
-    color: #000 !important
-}
-
-.w3-section,
-.w3-code {
-    margin-top: 16px !important;
-    margin-bottom: 16px !important
-}
-
-.w3-center {
-    text-align: center !important;
-}
-
-.w3-large {
-    font-size: 18px !important;
-}
-
-.w3-container,
-.w3-panel {
-    padding: 0.01em 16px;
-}
-.w3-display-bottommiddle {
-    width: 100%;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translate(-50%, 0%);
-}
-
-
-.w3-content,
-.w3-auto {
-    margin-left: 10px;
-    margin-right: auto;
-}
-.block-top-left{
+.block-top-left {
     max-width: 877px;
 }
-.mySlides{
+
+.swiper {
     width: 100%;
+    height: 381px;
 }
-.block-top-right{
+
+.swiper-slide {
+    width: 229px;
+    height: 378px;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.block-top-right {
     width: 283px;
     margin-left: 25px;
 }
+
 .right-banner {
     width: 100%;
     max-width: 283px;
 
 }
-.right-banner-item{
+
+.right-banner-item {
     min-height: calc(33.33333% - 10px);
     overflow: hidden;
     width: 100%;
     display: block;
     /* border-radius: 10px; */
 }
+
 .right-banner .right-banner__item .right-banner__img {
     float: left;
 }
+
 img {
     height: auto;
     max-width: 100%;
 }
+
 .horizontal-banner {
     margin-bottom: 15px;
 }
-.block-product{
+
+.block-product {
     margin-bottom: 10px;
     min-height: 250px;
 }
+
 .product-list-title {
     margin-bottom: 2px;
 }
+
 .title {
     display: block;
     font-size: 12px;
@@ -273,10 +251,12 @@ img {
     margin-right: 20px;
     margin-bottom: unset;
 }
+
 .title h2 {
     font-weight: 600;
     color: #444;
 }
+
 .related-tag {
     float: right;
     border-radius: 10px;
@@ -288,22 +268,27 @@ img {
     white-space: nowrap;
     height: 34px;
 }
+
 .list-related-tag {
     align-items: center;
     display: flex;
     margin-left: auto;
 }
+
 .related-tag:not(:last-child) {
     margin-right: 10px;
 }
-.product-list{
+
+.product-list {
     background: #43C0B8;
     border-radius: 10px;
 }
+
 /* button */
 .p-2 {
-    padding: 0.5rem!important;
+    padding: 0.5rem !important;
 }
+
 .swiper-container {
     margin-left: auto;
     margin-right: auto;
@@ -313,6 +298,7 @@ img {
     padding: 0;
     z-index: 1;
 }
+
 .swiper-wrapper {
     position: relative;
     width: 100%;
@@ -322,14 +308,17 @@ img {
     transition-property: transform;
     box-sizing: content-box;
 }
-.swiper-slide{
+
+.swiper-slide {
     background: #FFF;
     border-radius: 20px;
     box-shadow: 0 1px 2px 0 rgb(60 64 67 / 10%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
-.product-info-container{
+
+.product-info-container {
     align-items: center;
 }
+
 .product-info-container {
     width: auto;
     height: auto;
@@ -339,19 +328,24 @@ img {
     padding: 10px;
     margin-bottom: 10px;
     background-color: #fff;
-    box-shadow: 0 1px 2px 0rgba(60,64,67,.1),0 2px 6px 2pxrgba(60,64,67,.15);
+    box-shadow: 0 1px 2px 0rgba(60, 64, 67, .1), 0 2px 6px 2pxrgba(60, 64, 67, .15);
 }
+
 .product__image {
     text-align: center;
 }
+
 .product__image img {
     width: 160px;
     margin: 10px 0 0;
 }
+
 .product__name {
     -webkit-line-clamp: 3;
 }
-.product-info-container .product-info a .product__name h3, .product-info-container .product-info a .product__name p {
+
+.product-info-container .product-info a .product__name h3,
+.product-info-container .product-info a .product__name p {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     display: -webkit-box;
@@ -366,13 +360,16 @@ img {
 .product-info-container .product-info a {
     color: #444;
 }
+
 .block-hot-sale {
     padding: 2px;
     min-height: 350px;
     margin: 0 0 15px;
     border-radius: 10px;
 }
-.swiper-button-next, .swiper-button-prev {
+
+.swiper-button-next,
+.swiper-button-prev {
     position: absolute;
     top: 50%;
     width: 27px;
@@ -387,21 +384,24 @@ img {
     align-items: center;
     justify-content: center;
     color: var(--swiper-theme-color);
-    color: var(--swiper-navigation-color,var(--swiper-theme-color));
+    color: var(--swiper-navigation-color, var(--swiper-theme-color));
 }
+
 .swiper-button-prev {
     padding-right: 10px;
     border-radius: 0 100px 100px 0;
     left: 0;
 }
 
-.swiper-button-next{
+.swiper-button-next {
     padding-left: 10px;
     border-radius: 100px 0 0 100px;
     right: 0;
 }
-.swiper-button-next,.swiper-button-prev{
-    width: 30px ;
+
+/* .swiper-button-next,
+.swiper-button-prev {
+    width: 30px;
     height: 60px;
     display: flex;
     justify-content: center;
@@ -413,7 +413,7 @@ img {
     transition: .3s;
     outline: none;
     opacity: .8;
-}
+} */
 
 /* footer */
 .pds-footer {
@@ -423,136 +423,144 @@ img {
     position: relative;
     overflow-x: hidden;
 }
-.mt-4{
-    margin-top: 1rem!important;
+
+.mt-4 {
+    margin-top: 1rem !important;
 }
-@media only screen and (max-width: 1199px){
+
+@media only screen and (max-width: 1199px) {
     .pds-container {
-        width: 100%!important;
-        max-width: 1200px!important;
+        width: 100% !important;
+        max-width: 1200px !important;
         padding: 0 10px;
     }
-    .box-logo{
+
+    .box-logo {
         align-items: stretch;
         display: flex;
         flex-shrink: 0;
     }
+
     .icon-logo {
         background-image: url(assets/logo/logo1.png);
         background-position: 0 0;
-        background-repeat:no-repeat;
-        background-size:162px 29px;
+        background-repeat: no-repeat;
+        background-size: 162px 29px;
     }
-    .header-item{
+
+    .header-item {
         display: none;
     }
-    
-    .btn-category{
+
+    .btn-category {
         margin-left: 10px;
         display: flex;
         align-items: center;
         height: 42px;
         border-radius: 10px;
-        text-decoration: none!important;
+        text-decoration: none !important;
         position: relative;
     }
-    .about-category{
+
+    .about-category {
         display: none;
     }
-    .box-search{
+
+    .box-search {
         width: 100%;
         float: left;
         margin: 0 10px 0 10px;
     }
-    .pds-input{
+
+    .pds-input {
         font-size: 10px;
     }
-    .btn-cart{
+
+    .btn-cart {
         display: flex;
         align-items: center;
         height: 42px;
         padding: 6px 10px;
         border-radius: 10px;
-        text-decoration: none!important;
+        text-decoration: none !important;
         position: relative;
     }
+
     .pds-homepage {
-        padding: 10px 10px 10px 0;
+        padding: 10px;
     }
+    .block-top-left {
+        max-width: 70%;
+    }
+    .swiper{
+        width: 100%;
+        height: 100%;
+    }
+
     .is-flex-wrap-wrap {
-        flex-wrap: wrap!important;
+        flex-wrap: wrap !important;
     }
+
     .list-related-tag {
         overflow-x: auto;
         margin-right: auto;
         margin-left: unset;
         width: 100%;
+    }
+    .swiper-slide{
+        width: 237.333px;
+        margin-right: 10px;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    .box-logo{
+    .box-logo {
         width: 52px;
         height: 50px;
-    } 
-    .navbar-brand{
+    }
+
+    .navbar-brand {
         align-items: stretch;
         display: flex;
         flex-shrink: 0;
     }
+
     .pds-homepage {
         padding: 5px 5px;
     }
+
     .icon-logo {
         background-image: url(assets/logo/logo-moblie.png);
         background-position: 0 0;
-        background-repeat:no-repeat;
-        background-size:52px 52px;
+        background-repeat: no-repeat;
+        background-size: 52px 52px;
 
     }
-    .w3-content, .w3-auto {
-        margin-left: 0;
-        margin-right: auto;
+    .block-top-left {
+        max-width: 100%;
     }
-    .block-top-right{
+    .swiper{
+        width: 100%;
+        height: 100%;
+    }
+
+    .block-top-right {
         display: none;
     }
+
     .is-flex-wrap-wrap {
-        flex-wrap: wrap!important;
+        flex-wrap: wrap !important;
     }
+
     .list-related-tag {
         overflow-x: auto;
         margin-right: auto;
         margin-left: unset;
         width: 100%;
     }
-    
-  }
+    .swiper-slide{
+        width: 129.6px;
+        margin-right: 10px;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
